#
# some news ... see also TODO for hints
#


2017-10-04 -> add some new artwork
	   -> let object-fab demo use the new artwork

2017-10-03 -> some minor updates/adds regarding textures and co
	   -> add next steps to a complete data driven object generation
	   -> finalize objcet_fab example

2017-09-29 -> some fix texture handling in dynamic_config example
	   -> add first steps to a complete data driven object generation

2017-09-28 -> add skeleton of object_fab example

2017-09-27 -> some fixes for player handling in dynamic_config example
	   -> mv config stuff to helper

2017-09-24 -> add game_obj_func_t which holds all functions
	   -> make flying_astronaut_2 and collision use it
	   -> add first stuff for the config handling (data driven design)
	   -> add skeleton and first parts for dynamic_config (flying astrount data driven)
	   -> add new_velo to game_obj_t
	   -> add libconfig for configuration file handling

2017-09-22 -> fix collision_object function

2017-09-20 -> use new game_obj_t and game_obj_data_t in all examples
	   -> add functions for collision handling (lib and two example's)

2017-09-19 -> add usage.md to describe the general usage of the library/examples
	   -> some first changes regarding object fab

2017-09-18 -> some smaller improvements in flying_astronaut and input_control
	   -> some smaller documentation updates

2017-09-17 -> add skeleton for menu program which should start all demos
	   -> add function init_game_object_from_file_simple() which uses the
	      texture info for with/height
	   -> add file object_fab.c to libgame (game object fab based on a
	      configuration file)

2017-09-15 -> remove accel related stuff
	   -> finalize flying_astronaut example

2017-09-13 -> add some functions to handle mouse related topics
	   -> finalize follow_mouse example
	   -> add some more documentation
	   -> add some functions in different areas
	   -> add skeleton and first steps of flying_astronaut "ball" demo