@@ -1,0 +1,2 @@
+/joystick_fab
+/main.o
