@@ -6,17 +6,30 @@
 #
 
 # somthing like a simple version check
-name = "object_fab";
+name = "joystick_fab";
 
 config:
 {
 	  window:
 	  {
-		title = "object_fab demo";
+		title = "joystick_fab demo";
 		size = { w = 1280; h = 720 };
 
 		background = { r = 100; g = 200; b = 100; a = 255 };
 	  };
+
+	  joysticks = (
+	  	{
+			name = "joystick_1";
+			player = "player_1";
+			step = 1;
+		},
+		{
+			name = "joystick_2";
+			player = "player_2";
+			step = 1;
+		}
+	  );
 
 	  textures = (
 		{
